adding build cache key

--- a/.github/workflows/build.typescript.highmem.yml
+++ b/.github/workflows/build.typescript.highmem.yml
@@ -22,8 +22,21 @@ on:
         required: false
         type: string
         default: "~/.cache/Cypress"
+      build_cache_key:
+        required: false
+        type: string
+        default: build-cache-${{ github.sha }}
 
 jobs:
+  merge-main:
+    name: Merge main into PR
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - uses: tibdex/auto-update@v2
+        with:
+          github_token: ${{ secrets.GHA_PAT }}
+
   labeler:
     name: Label branch
     runs-on: ubuntu-latest
@@ -116,7 +129,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./*
-          key: build-cache-${{ github.sha }}-${{ github.run_id }}-${{ github.run_attempt }}
+          key: ${{ inputs.build_cache_key }}
 
       - name: Upload cypress binary cache
         uses: actions/cache@v3
