--- a/.github/workflows/build.typescript.highmem.yml
+++ b/.github/workflows/build.typescript.highmem.yml
@@ -22,6 +22,10 @@ on:
         required: false
         type: string
         default: "~/.cache/Cypress"
+      cache_path:
+        required: false
+        type: string
+        default: ./*
 
 jobs:
   labeler:
@@ -115,7 +119,7 @@ jobs:
       - name: Upload build cache
         uses: actions/cache@v3
         with:
-          path: ./*
+          path: ${{inputs.cache_path}}
           key: build-cache-${{ github.sha }}-${{ github.run_id }}-${{ github.run_attempt }}
 
       - name: Upload cypress binary cache
