--- a/.github/workflows/test.e2e.typescript.yml
+++ b/.github/workflows/test.e2e.typescript.yml
@@ -40,6 +40,11 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        # run 3 copies of the current job in parallel
+        containers: [1, 2, 3]
     steps:
       - name: Create environment variables for npm commands
         if: inputs.package_manager == 'npm'
