--- a/.github/workflows/test.unit.typescript.yml
+++ b/.github/workflows/test.unit.typescript.yml
@@ -52,6 +52,14 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      gcp:
+        image: google/cloud-sdk:439.0.0
+        ports:
+            - 8085:8085
+        expose:
+            - 8085
+        command: >
+            bash -c "gcloud beta emulators pubsub start --host-port=0.0.0.0:8085"
 
     steps:
       - name: Create environment variables for npm commands
