Feature/fbt 1975 add gcp emulators to unit test scripts in GitHub workflows (#32)
* [fbt-1975] add gcp pubsub emulator to typescript unit tests for platform with conditional logic

---------

Co-authored-by: Ben Gilbert <flex@Bens-MacBook-Pro.local>

--- a/.github/workflows/test.unit.typescript.yml
+++ b/.github/workflows/test.unit.typescript.yml
@@ -25,6 +25,10 @@ on:
         required: false
         type: boolean
         default: false
+      use_gcp_emulators:
+        required: false
+        type: boolean
+        default: false
       build_cache_key:
         required: false
         type: string
@@ -80,7 +84,21 @@ jobs:
           sudo mv migrate /usr/bin/
           which migrate
 
+      - name: 'Install Cloud SDK'
+        if: ${{ inputs.use_gcp_emulators == true }}
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          version: '>= 439.0.0'
+          install_components: 'beta,pubsub-emulator'
+
+      - name: 'Start Pub/Sub emulator'
+        if: ${{ inputs.use_gcp_emulators == true }}
+        run: |
+          gcloud beta emulators pubsub start --host-port=0.0.0.0:8085 &
+
       - name: Run tests
+        env:
+          PUBSUB_EMULATOR_HOST: 'localhost:8085'
         run: ${{ env.CLI_TEST }}
 
       - name: Upload coverage artifacts
