--- a/.github/workflows/typescript.sonarcloud.yml
+++ b/.github/workflows/typescript.sonarcloud.yml
@@ -31,7 +31,7 @@ jobs:
           path: coverage
 
       - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@vmaster
+        uses: sonarsource/sonarcloud-github-action@master
         with:
           args: >
             -Dsonar.organization=${{ env.SONAR_ORG }}
