--- a/.github/workflows/test.unit.typescript.yml
+++ b/.github/workflows/test.unit.typescript.yml
@@ -5,22 +5,22 @@ on:
       package_manager:
         required: false
         type: string
-        default: "yarn"
+        default: 'yarn'
       test_command:
         required: false
         type: string
-        default: "test:ci"
+        default: 'test:ci'
       node_version:
         required: false
         type: string
       coverage_artifact_folder:
         required: false
         type: string
-        default: "coverage/lcov.info"
+        default: 'coverage/lcov.info'
       coverage_artifact_name:
         required: false
         type: string
-        default: "code-coverage-report"
+        default: 'code-coverage-report'
       use_go_migrate:
         required: false
         type: boolean
@@ -64,7 +64,7 @@ jobs:
 
       - name: Retrieve build cache
         id: cache
-        uses: actions/cache/restore@v3
+        uses: actions/cache/restore@v4
         with:
           path: ./*
           key: ${{ inputs.build_cache_key }}
@@ -72,7 +72,7 @@ jobs:
 
       - name: Setup Node ${{ inputs.node_version }}
         if: ${{ inputs.node_version != ''}}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node_version }}
           cache: ${{ inputs.package_manager }}
