[fix] rollback version update for auto-updater, needs additional testing

--- a/.github/workflows/build.typescript.highmem.yml
+++ b/.github/workflows/build.typescript.highmem.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
-      - uses: flexbase-eng/auto-update@main
+      - uses: tibdex/auto-update@v2
         with:
           github_token: ${{ secrets.GHA_PAT }}
 
